fixed gallery images being invisible I think

--- a/src/Routes/Gallery/Gallery.scss
+++ b/src/Routes/Gallery/Gallery.scss
@@ -1,15 +1,7 @@
-@media only screen and (max-width: 575px) {
-    .gallery {
-        grid-gap: 0.2rem;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
-}
 @media only screen and (min-width: 575px) {
     .gallery {
         --stagger-delay: 100ms;
-        grid-gap: 0.5rem;
-        grid-template-rows: repeat(20vw);
-        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 15px;
         margin-bottom: 2rem;
     }
     .gallery .card:hover {
@@ -21,15 +13,15 @@
 .gallery {
     --stagger-delay: 100ms;
     display: grid;
+    grid-gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 550px;
 }
 
 .gallery .card {
-    border: 0;
-    border-radius: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: transform 0.25s;
 }
 
 .gallery .card-entrance {
